030-software/fluxcd/apps/kubeopencode/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: workspace
  labels:
    bundle.cert-manager.io/inject-cm: enabled
